# tauri-typescript-react-boilerplate

./: .babelrc  LICENSE  README.md  package-lock.json  package.json  webpack.config.js  webpack.config.ts
.github/: dependabot.yml
src/: app.tsx  index.tsx  template.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs  menu.rs
